@@ -5,9 +5,23 @@
     <col />
     <thead>
         <tr>
-            <th class="title">{% trans "Search term(s)" %}</th>
+            <th class="title">
+                {% trans "Search term(s)" %}
+                {% if "query_string" in ordering %}
+                    <a href="{% url 'wagtailsearchpromotions:index' %}?ordering={% if '-' not in ordering %}-{% endif %}query_string" class="icon icon-arrow-{% if '-' in ordering %}up{% else %}down{% endif %}-after teal" aria-label="{% if '-' in ordering %}{% trans 'Order by search term alphabetically' %}{% else %}{% trans 'Order by search term reverse alphabetically' %}{% endif %}"></a>
+                {% else %}
+                    <a href="{% url 'wagtailsearchpromotions:index' %}?ordering=query_string" class="icon icon-arrow-down-after" aria-label="{% trans 'Order by search term alphabetically' %}"></a>
+                {% endif %}
+            </th>
             <th>{% trans "Promoted results" %}</th>
-            <th>{% trans "Views (past week)" %}</th>
+            <th>
+                {% trans "Views (past week)" %}
+                {% if "views" in ordering %}
+                    <a href="{% url 'wagtailsearchpromotions:index' %}?ordering={% if '-' not in ordering %}-{% endif %}views" class="icon icon-arrow-{% if '-' in ordering %}up{% else %}down{% endif %}-after teal" aria-label="{% if '-' in ordering %}{% trans 'Order by views (lowest first)' %}{% else %}{% trans 'Order by views (highest first)' %}{% endif %}"></a>
+                {% else %}
+                    <a href="{% url 'wagtailsearchpromotions:index' %}?ordering=views" class="icon icon-arrow-down-after" aria-label="{% trans 'Order by views (lowest first)' %}"></a>
+                {% endif %}
+            </th>
         </tr>
     </thead>
     <tbody>
