@@ -1,4 +1,5 @@
 from django.core.paginator import Paginator
+from django.db.models import Sum, functions
 from django.shortcuts import get_object_or_404, redirect
 from django.template.response import TemplateResponse
 from django.urls import reverse
@@ -20,28 +21,44 @@ from wagtail.search.models import Query
 )
 @vary_on_headers('X-Requested-With')
 def index(request):
-    is_searching = False
-    query_string = request.GET.get('q', "")
+    # Ordering
+    valid_ordering = ['query_string', '-query_string', 'views', '-views']
+    ordering = valid_ordering[0]
 
-    queries = Query.objects.filter(editors_picks__isnull=False).distinct().order_by('query_string')
+    if 'ordering' in request.GET and request.GET['ordering'] in valid_ordering:
+        ordering = request.GET['ordering']
+
+    # Query
+    queries = Query.objects.filter(editors_picks__isnull=False).distinct()
+
+    if 'views' in ordering:
+        queries = queries.annotate(views=functions.Coalesce(Sum('daily_hits__hits'), 0))
+
+    queries = queries.order_by(ordering)
 
     # Search
+    is_searching = False
+    query_string = request.GET.get('q', '')
+
     if query_string:
         queries = queries.filter(query_string__icontains=query_string)
         is_searching = True
 
+    # Paginate
     paginator = Paginator(queries, per_page=20)
     queries = paginator.get_page(request.GET.get('p'))
 
     if request.is_ajax():
         return TemplateResponse(request, "wagtailsearchpromotions/results.html", {
             'is_searching': is_searching,
+            'ordering': ordering,
             'queries': queries,
             'query_string': query_string,
         })
     else:
         return TemplateResponse(request, 'wagtailsearchpromotions/index.html', {
             'is_searching': is_searching,
+            'ordering': ordering,
             'queries': queries,
             'query_string': query_string,
             'search_form': SearchForm(
